CreateKubernetesObjects/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE
  labels:
    name: NAME
