CreateKubernetesObjects/caseclinical-fuse-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caseclinical-fuse-service
  namespace: NAMESPACE
  labels:
    app: caseclinical-fuse-service
    name: NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caseclinical-fuse-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: caseclinical-fuse-service
      labels:
        app: caseclinical-fuse-service
    spec:
      containers:
        - name: caseclinical-fuse-service
          image: caseclinicaluat.azurecr.io/caseclinical-fuse-service
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 600Mi
            limits:
              cpu: 250m
              memory: 1000Mi
          ports:
            - containerPort: 3000
