CreateKubernetesObjects/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: caseclinical-fuse-service
  namespace: NAMESPACE
  labels:
    app: caseclinical-fuse-service
    name: NAME
spec:
  selector:
    app: caseclinical-fuse-service
    name: NAME
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
