CreateKubernetesObjects/appgw-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appgw-ingress
  namespace: NAMESPACE
  labels:
    name: NAME
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - HOST
    - HOST
    secretName: ingress-tls-cert
  rules:
  - host: HOST
    http:
      paths:
      - backend:
          service:
            name: caseclinical-fuse-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: HOST
    http:
      paths:
      - backend:
          service:
            name: caseclinical-fuse-service
            port:
              number: 3000
        path: /graphql
        pathType: Prefix
